...
            .listStyle(PlainListStyle())

            HStack(alignment: .bottom, spacing: 0) {
                Button(action: self.addClicked) {Text("+")}
                    .frame(width: 30)
                    .disabled(viewModel.isAddButtonDisabled)
                    .accessibilityIdentifier("add job")
                Button(action: self.deleteClicked) { Text("-") }
                    .frame(width: 30)
                    .accessibilityIdentifier("remove job")
                Spacer()
                    .frame(maxWidth: .infinity)
            }
        }
        .frame(width: 200)
    }
...
