...
        }
        
        menu.addMenuItemSeparator(tag: .jobsSectionSeparator)
    }
    
    private func setupPreferencesSection() {
        menu.addMenuItem(title: "Preferences...",
                         tag: .preferencesButton,
                         action: #selector(launchPreferences(_:)),
                         delegate: self)
        
        menu.addMenuItemSeparator(tag: .preferencesSectionSeparator)
    }
...
